updated the welcome view controller and added in the white fire logo.

--- a/FIRE/Resources/Base.lproj/LaunchScreen.storyboard
+++ b/FIRE/Resources/Base.lproj/LaunchScreen.storyboard
@@ -18,24 +18,24 @@
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="logo-FIRE-10" translatesAutoresizingMaskIntoConstraints="NO" id="uml-5f-cun">
-                                <rect key="frame" x="158.5" y="303.5" width="57" height="80"/>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" image="FIREBlack" translatesAutoresizingMaskIntoConstraints="NO" id="uQ4-wV-7j0">
+                                <rect key="frame" x="67" y="261" width="240" height="240"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
-                            <constraint firstItem="uml-5f-cun" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="6yT-Ta-7zw"/>
-                            <constraint firstItem="uml-5f-cun" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="nE6-Fg-B1h"/>
+                            <constraint firstItem="uQ4-wV-7j0" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="7mF-Zg-Nbk"/>
+                            <constraint firstItem="uQ4-wV-7j0" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" constant="37.5" id="HfA-9p-3tU"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="iYj-Kq-Ea1" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="53" y="375"/>
+            <point key="canvasLocation" x="52" y="374.66266866566718"/>
         </scene>
     </scenes>
     <resources>
-        <image name="logo-FIRE-10" width="57" height="80"/>
+        <image name="FIREBlack" width="120" height="166"/>
     </resources>
 </document>
