--- a/FIRE/UI/Base.lproj/Main.storyboard
+++ b/FIRE/UI/Base.lproj/Main.storyboard
@@ -414,7 +414,7 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="Years Old" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aPc-wG-z9C">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="# of Years Old" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="aPc-wG-z9C">
                                                 <rect key="frame" x="43" y="0.0" width="219" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" name="SFCompactText-Regular" family="SF Compact Text" pointSize="17"/>
@@ -582,7 +582,7 @@
                                                 <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                 <nil key="highlightedColor"/>
                                             </label>
-                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$ Total Savings" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ar5-8Z-jsM">
+                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" borderStyle="roundedRect" placeholder="$ Current Total Savings" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Ar5-8Z-jsM">
                                                 <rect key="frame" x="43" y="0.0" width="219" height="30"/>
                                                 <nil key="textColor"/>
                                                 <fontDescription key="fontDescription" name="SFCompactText-Regular" family="SF Compact Text" pointSize="17"/>
@@ -765,9 +765,7 @@
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dhu-Wj-KyS"/>
                     </view>
-                    <navigationItem key="navigationItem" id="fjo-bK-yTm">
-                        <barButtonItem key="rightBarButtonItem" title="Item" image="FireWhite" id="F4m-8V-oK1"/>
-                    </navigationItem>
+                    <navigationItem key="navigationItem" id="fjo-bK-yTm"/>
                     <connections>
                         <outlet property="ageTextField" destination="aPc-wG-z9C" id="o8Q-Jj-1mw"/>
                         <outlet property="annualIncomeInfoButtom" destination="3dg-1H-B27" id="bm9-0U-5Sn"/>
@@ -802,7 +800,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="3a4-8a-smM">
-                                <rect key="frame" x="16" y="88" width="343" height="555"/>
+                                <rect key="frame" x="16" y="64" width="343" height="579"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <string key="text">Based on these inputs, you are years away from financial Independence! You could reach finacial independence when you are years old</string>
                                 <fontDescription key="fontDescription" name="SFCompactText-Regular" family="SF Compact Text" pointSize="20"/>
@@ -812,7 +810,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                         <constraints>
                             <constraint firstItem="3a4-8a-smM" firstAttribute="leading" secondItem="dRp-RT-HMp" secondAttribute="leadingMargin" id="2Bs-c1-puK"/>
-                            <constraint firstItem="3a4-8a-smM" firstAttribute="top" secondItem="MXO-su-CRh" secondAttribute="top" constant="24" id="e62-eh-h8J"/>
+                            <constraint firstItem="3a4-8a-smM" firstAttribute="top" secondItem="MXO-su-CRh" secondAttribute="top" id="e62-eh-h8J"/>
                             <constraint firstItem="MXO-su-CRh" firstAttribute="trailing" secondItem="3a4-8a-smM" secondAttribute="trailing" constant="16" id="nds-9L-5c6"/>
                             <constraint firstItem="MXO-su-CRh" firstAttribute="bottom" secondItem="3a4-8a-smM" secondAttribute="bottom" constant="24" id="qOr-O3-VU4"/>
                         </constraints>
